--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ヘアカタログ</title>
-  <link href="" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+        <img class="" src="">
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
