--- a/index.html
+++ b/index.html
@@ -10,14 +10,7 @@
   <header>
     <div class="container">
       <div class="header-left">
-      </div>
-      <span class="fa fa-bars menu-icon"></span>
-      <div class="header-right">
-        <a href=""></a>
-        <a href=""></a>
-        <a href="" class=""></a>
-      </div>
-    </div>
+       sss
   </header>
   <div class="top-wrapper">
     <div class="container">
