--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <header>
     <div class="container">
-      <div class="header-left">
-       sss
+      <div class="">
+      
   </header>
   <div class="top-wrapper">
     <div class="container">
