--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+ <head>
+   <meta charset="utf-8">
+   <title>ヘアデザイン</title>
+  <link rel="stylesheet" href="stylesheet.css">
+ 
+ </head>
+ <body>
+  <h1 class="title"></h1>
+   <img src=""  width="" height=""/alt="">
+   <object data=""width="100%" height="100%"></object>
+   <video controls src=""></video> 
+  
+   <button type=“button” onclick="location.href=''">ボタン名</button>
+
+ </body>
+</html>
+
 
