--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <h1＞ class="title"></h1>
    <img src=""  width="" height=""/alt="">
    <object data=""width="100%" height="100%"></object>
+  <div class="content">
+ <div class="inner">
+   <button>ボタン1</button>
+   <button>ボタン2</button>
+   <button>ボタン3</button>
+ </div>
+</div>
  </body>
 </html>
 
