--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
    <object data=""width="100%" height="100%"></object>
   <div class="content">
  　<div class="inner">
-   <button>ボタン1</button>
-   <button>ボタン2</button>
-   <button>ボタン3</button>
+   <button type=“button” onclick="location.href='url'">ボタン名</button>
+   <button type=“button” onclick="location.href='url'">ボタン名</button>
+   <button type=“button” onclick="location.href='url'">ボタン名</button>
  　</div>
 </div>
  </body>
