--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="content">
  　<div class="inner">
    <button type=“button” onclick="location.href='url'">ボタン名</button>
+   <button class="size-button"data-font="20"></button>
    <button type=“button” onclick="location.href='url'">ボタン名</button>
    <button type=“button” onclick="location.href='url'">ボタン名</button>
  　</div>
