--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <object data=""width="100%" height="100%"></object>
   <div class="content">
  　<div class="inner">
-   <button type=“button” onclick="location.href='url'">ボタン名</button>
+   <button type=“button” onclick="location.href='url'">デザインカラー</button>
    <button type=“button” onclick="location.href='url'">ボタン名</button>
    <button type=“button” onclick="location.href='url'">ボタン名</button>
  　</div>
