--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <div class="content">
  　<div class="inner">
    <button type=“button” onclick="location.href='url'">デザインカラー</button>
-   <button type=“button” onclick="location.href='url'">ボタン名</button>
-   <button type=“button” onclick="location.href='url'">ボタン名</button>
+   <button type=“button” onclick="location.href='url'">トリートメント</button>
+   <button type=“button” onclick="location.href='url'">メンズデザイン</button>
  　</div>
 </div>
  </body>
