--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
    <object data=""width="100%" height="100%"></object>
   <div class="content">
  　<div class="inner">
-   <a href="#"class="btn-square-toy"></a>
-   <button type=“button” onclick="location.href='url'">デザインカラー</button>
+   <button type=“btn-square-toy” onclick="location.href='url'">デザインカラー</button>
    <button type=“button” onclick="location.href='url'">トリートメント</button>
    <button type=“button” onclick="location.href='url'">メンズデザイン</button>
  　</div>
