--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  
  </head>
  <body>
+  body { background-image: url(***.gif);}
   <h1＞ class="title"></h1>
    <img src=""  width="" height=""/alt="">
    <object data=""width="100%" height="100%"></object>
