--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  
  </head>
  <body>
-  <background-image: https://github.com/Creapct/creapct.github.io/blob/main/IMG_3043.jpeg?raw=true(***.gif);>
+  <background-image: https://github.com/Creapct/creapct.github.io/blob/main/IMG_3043.jpeg?;>
   <h1＞ class="title"></h1>
    <img src=""  width="" height=""/alt="">
    <object data=""width="100%" height="100%"></object>
