--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
    <meta charset="utf-8">
    <title>ヘアデザイン</title>
   <link rel="stylesheet" href="stylesheet.css">
- 
  </head>
  <body>
+  <div class="img"></div>
   <h1＞ class="title"></h1>
    <img src=""  width="" height=""/alt="">
    <object data=""width="100%" height="100%"></object>
