--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
  　</div>
 </div>
  </body>
+ <footer>
    <img src="https://github.com/Creapct/creapct.github.io/blob/main/IMG_8280.jpeg?raw=true"  width="100%" height="30"/alt="">
+ </footer> 
 </html>
 
 
