--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
  <body>
   <div class="img"></div>
   <h1＞ class="title"></h1>
+   <img src=""  width="100%" height="50"/alt="">
    <object data=""width="100%" height="100%"></object>
   <div class="content">
  　<div class="inner">
