--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
   <div class="img"></div>
   <h1＞ class="title"></h1>
-   <img src="https://github.com/Creapct/creapct.github.io/blob/main/IMG_3044.jpeg?raw=true"  width="100%" height="50"/alt="">
+   <img src="https://github.com/Creapct/creapct.github.io/blob/main/IMG_3044.jpeg?raw=true"  width="100%" height="100%"/alt="">
    <object data=""width="100%" height="100%"></object>
   <div class="content">
  　<div class="inner">
@@ -19,8 +19,7 @@
  　</div>
 </div>
  </body>
- <footer>
-   
+ <footer>   
  </footer> 
 </html>
 
