--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <button type=“button” onclick="location.href='url'">デザインカラー</button>
    <button type=“button” onclick="location.href='url'">トリートメント</button>
    <button type=“button” onclick="location.href='url'">メンズデザイン</button>
-   <img src="https://github.com/Creapct/creapct.github.io/blob/main/IMG_8280.jpeg?raw=true"  width="100%" height="10%"/alt="">
+   <img src="https://github.com/Creapct/creapct.github.io/blob/main/IMG_3049.jpg?raw=true"  width="100%" height="10%"/alt="">
  　</div>
 </div>
  </body>
