--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1＞ class="title"></h1>
   <div class="content">
  　<div class="inner">
-   <img src="https://github.com/Creapct/creapct.github.io/blob/main/IMG_3044.jpeg?raw=true"  width="100%" height="250%"/alt="">
+   <img src="https://github.com/Creapct/creapct.github.io/blob/main/IMG_3054.jpg?raw=true"  width="100%" height="250%"/alt="">
    <button type=“button” onclick="location.href='url'">デザインカラー</button>
    <button type=“button” onclick="location.href='url'">トリートメント</button>
    <button type=“button” onclick="location.href='url'">メンズデザイン</button>
